[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/art/player/hobo_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/art/player/hobo.png" type="Texture" id=2]
[ext_resource path="res://src/Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/InventoryUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/items/item_shadow.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/PlayerHud.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/player/hobo_dead.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/coin.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/art/player/hobo_roll.png" type="Texture" id=9]
[ext_resource path="res://scenes/ui/Console.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 20 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walking",
"speed": 11.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=12]
radius = 16.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 20 )

[sub_resource type="Animation" id=15]
resource_name = "flash"
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "roll"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="." groups=["player"]]
position = Vector2( 0, -24 )
scale = Vector2( 3, 3 )
z_as_relative = false
frames = SubResource( 9 )
animation = "roll"

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
z_as_relative = false
texture = ExtResource( 5 )

[node name="PlayerHud" parent="." instance=ExtResource( 6 )]

[node name="InventoryUI" parent="." instance=ExtResource( 4 )]

[node name="WorldCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, -8, 16, -8, 16, 8, -16, 8 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -8 )
current = true
zoom = Vector2( 0.67, 0.67 )
smoothing_enabled = true
smoothing_speed = 8.5
editor_draw_screen = false

[node name="UseCooldownTimer" type="Timer" parent="."]

[node name="ItemPickup" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickup"]
shape = SubResource( 11 )

[node name="InteractRange" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource( 12 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -20 )
shape = SubResource( 13 )

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="StaminaDelay" type="Timer" parent="."]
one_shot = true

[node name="StaminaRegen" type="Timer" parent="."]
wait_time = 0.01

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Anims" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 15 )
anims/roll = SubResource( 16 )

[node name="Console" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="timeout" from="UseCooldownTimer" to="." method="_on_UseCooldownTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hit"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_knockback_over"]
[connection signal="timeout" from="StaminaDelay" to="." method="_on_stamina_delay_over"]
[connection signal="timeout" from="StaminaRegen" to="." method="_regen_stamina"]
[connection signal="animation_finished" from="Anims" to="." method="_on_anim_over"]
